--- a/index copy.html
+++ b/index copy.html
@@ -31,8 +31,8 @@
             <a class="nav-link" aria-current="page" href="#">Contatos</a>
           </li>
         </ul>
-        <button type="button" class="btn btn-primary">Login</button>
-        <button type="button" class="btn btn-secondary">Registar</button>
+        <button id="loginBtn" type="button" class="btn btn-primary">Login</button>
+        <button id="loginBtn" type="button" class="btn btn-secondary">Registar</button>
       </div>
     </div>
   </nav>
@@ -109,6 +109,11 @@
 
 
 
+  <script>
+    document.getElementById('loginBtn').addEventListener('click', function() {
+      window.location.href = 'login.html';
+    });
+  </script>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
