novo update imagens landing page

--- a/landing_home_page.html
+++ b/landing_home_page.html
@@ -71,21 +71,21 @@
       </div>
       <div class="feature col" style="text-align: center;">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3" >
-          <img src="imgs/location.png" alt="Ícone de localização" width="160" height="160">
+          <img src="imgs/escolha_comida_burger_drink.png" alt="Ícone de localização" width="160" height="160">
         </div>
         <h3 class="fs-2 text-body-emphasis">Escolha comida</h3>
         <p>Escolha entre diversos tipos de restaurantes e comidas deliciosas disponíveis.</p>
       </div>
       <div class="feature col" style="text-align: center;">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3" >
-          <img src="imgs/location.png" alt="Ícone de localização" width="160" height="160">
+          <img src="imgs/pague_online_money_euro.png" alt="Ícone de localização" width="160" height="160">
         </div>
         <h3 class="fs-2 text-body-emphasis">Pague online</h3>
         <p>Pague de maneira rápida, simples e segura. Escolha entre diversos meios de pagamento.</p>
       </div>
       <div class="feature col" style="text-align: center;">
         <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3" >
-          <img src="imgs/location.png" alt="Ícone de localização" width="160" height="160">
+          <img src="imgs/desfrute_smileFace.png" alt="Ícone de localização" width="160" height="160">
         </div>
         <h3 class="fs-2 text-body-emphasis">Desfrute</h3>
         <p>A comida é feita e entregue diretamente onde estás.</p>
@@ -93,7 +93,7 @@
     </div>
   </div>
 
-  <!-- OUTRO COMO TRABALHAMOS 
+  <!-- OUTRO EXEMPLO COMO TRABALHAMOS 
   <div class="container px-4 py-5" id="custom-cards">
     <h1 class="pb-2 border-bottom" style="text-align: center; font-weight: bolder;">Como Trabalhamos</h1>
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
