update landing page

--- a/landing_home_page.html
+++ b/landing_home_page.html
@@ -57,34 +57,33 @@
 
   <hr>
 
-
   <!-- CONTAINER COMO TRABALHAMOS -->
   <div class="container px-4 py-5" id="featured-3">
     <h1 class="pb-2 border-bottom" style="text-align: center; font-weight: bolder;">Como Trabalhamos</h1>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-4">
       <div class="feature col" style="text-align: center;">
-        <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3" >
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
           <img src="imgs/location.png" alt="Ícone de localização" width="160" height="160">
         </div>
         <h3 class="fs-2 text-body-emphasis">Escolha localização</h3>
         <p>Escolha a localização onde a sua comida será entregue.</p>
       </div>
       <div class="feature col" style="text-align: center;">
-        <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3" >
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
           <img src="imgs/escolha_comida_burger_drink.png" alt="Ícone de localização" width="160" height="160">
         </div>
         <h3 class="fs-2 text-body-emphasis">Escolha comida</h3>
         <p>Escolha entre diversos tipos de restaurantes e comidas deliciosas disponíveis.</p>
       </div>
       <div class="feature col" style="text-align: center;">
-        <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3" >
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
           <img src="imgs/pague_online_money_euro.png" alt="Ícone de localização" width="160" height="160">
         </div>
         <h3 class="fs-2 text-body-emphasis">Pague online</h3>
         <p>Pague de maneira rápida, simples e segura. Escolha entre diversos meios de pagamento.</p>
       </div>
       <div class="feature col" style="text-align: center;">
-        <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3" >
+        <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient fs-2 mb-3">
           <img src="imgs/desfrute_smileFace.png" alt="Ícone de localização" width="160" height="160">
         </div>
         <h3 class="fs-2 text-body-emphasis">Desfrute</h3>
@@ -204,10 +203,56 @@
         </div>
       </div>
     </div>
+  </div> 
+  -->
+
+  <hr>
+
+  <!-- CONTAINER FUNCIONALIDADES E INFORMAÇÕES EXTRAS -->
+  <div class="container px-4 py-5" id="custom-cards">
+    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+      <div class="col">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('imgs/descontos_20.jpg'); background-size: cover;">
+          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Descontos nos melhores restaurantes</h3>
+            <ul class="d-flex list-unstyled mt-auto">
+              <li class="me-auto">
+                <img src="imgs/fd reduced logo.png" alt="Bootstrap" width="32" height="20">
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('imgs/live_tracking.jpg'); background-size: cover;">
+          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Acompanhamento em tempo real</h3>
+            <ul class="d-flex list-unstyled mt-auto">
+              <li class="me-auto">
+                <img src="imgs/fd reduced logo.png" alt="Bootstrap" width="32" height="20">
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('imgs/fast_delivery.jpg'); background-size: cover;">
+          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Entregas rápidas</h3>
+            <ul class="d-flex list-unstyled mt-auto">
+              <li class="me-auto">
+                <img src="imgs/fd reduced logo.png" alt="Bootstrap" width="32" height="20">
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
--->
-  <hr>
-  <hr>
+
+
 
   <!-- FOOTER -->
   <div class="container">
