--- a/landing_home_page.html
+++ b/landing_home_page.html
@@ -308,7 +308,7 @@
 
   <script>
     document.getElementById('loginBtn').addEventListener('click', function () {
-      window.location.href = 'login.html';
+      window.location.href = 'login_register/login.html';
     });
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
