--- a/landing_home_page.html
+++ b/landing_home_page.html
@@ -212,7 +212,8 @@
   <div class="container px-4 py-5" id="custom-cards">
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
       <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('imgs/descontos_20.jpg'); background-size: cover;">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+          style="background-image: url('imgs/descontos_20.jpg'); background-size: cover;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Descontos nos melhores restaurantes</h3>
             <ul class="d-flex list-unstyled mt-auto">
@@ -225,7 +226,8 @@
       </div>
 
       <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('imgs/live_tracking.jpg'); background-size: cover;">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+          style="background-image: url('imgs/live_tracking.jpg'); background-size: cover;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Acompanhamento em tempo real</h3>
             <ul class="d-flex list-unstyled mt-auto">
@@ -238,7 +240,8 @@
       </div>
 
       <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('imgs/fast_delivery.jpg'); background-size: cover;">
+        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+          style="background-image: url('imgs/fast_delivery.jpg'); background-size: cover;">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Entregas rápidas</h3>
             <ul class="d-flex list-unstyled mt-auto">
@@ -252,7 +255,71 @@
     </div>
   </div>
 
+  <hr>
 
+  <!-- PUBLICIDADE BUSINESS EMPRESARIAL -->
+  <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class="active"
+        aria-current="true"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+    </div>
+    <div class="carousel-inner">
+
+
+      <div class="carousel-item">
+        <img src="imgs/restaurant_img1_car_business.png" class="d-block w-100" alt="Imagem de um restaurante"
+          style="height: 600px;">
+        <div class="container">
+          <div class="carousel-caption text-start">
+            <h1>Registe o seu estabelecimento</h1>
+            <p class="opacity-90">Ainda não realiza entregas no seu restaurante? Registe o seu estabelecimento ou rede
+              de restaurantes e comece já a efetuar entregas online.</p>
+            <p><a class="btn btn-lg btn-primary" href="#">Registar</a></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="carousel-item active">
+        <img src="imgs/kitchen_img2_car_business.png" class="d-block w-100" alt="Imagem de uma cozinha"
+          style="height: 600px;">
+        <div class="container">
+          <div class="carousel-caption text-start">
+            <h1>Receba estatísticas</h1>
+            <p>Receba estatísticas detalhadas sobre as suas vendas.</p>
+            <p><a class="btn btn-lg btn-primary" href="#">Registar</a></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img src="imgs/deliveryGuy_img3_car_business.png" class="d-block w-100" alt="Imagem de dois homens"
+          style="height: 600px;">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Não espere pelo futuro, comece a moldá-lo hoje mesmo!</h1>
+            <p><a class="btn btn-lg btn-primary" href="#">Registar</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+
+  </div>
+  <br><br><br>
+  <div style="text-align: center;">
+    <button type="button" class="btn btn-dark btn-lg">Criar conta empresarial</button>
+  </div>
+  
+  <hr>
 
   <!-- FOOTER -->
   <div class="container">
