--- a/landing_home_page.html
+++ b/landing_home_page.html
@@ -266,8 +266,6 @@
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
     </div>
     <div class="carousel-inner">
-
-
       <div class="carousel-item">
         <img src="imgs/restaurant_img1_car_business.png" class="d-block w-100" alt="Imagem de um restaurante"
           style="height: 600px;">
@@ -280,7 +278,6 @@
           </div>
         </div>
       </div>
-
       <div class="carousel-item active">
         <img src="imgs/kitchen_img2_car_business.png" class="d-block w-100" alt="Imagem de uma cozinha"
           style="height: 600px;">
@@ -292,7 +289,6 @@
           </div>
         </div>
       </div>
-
       <div class="carousel-item">
         <img src="imgs/deliveryGuy_img3_car_business.png" class="d-block w-100" alt="Imagem de dois homens"
           style="height: 600px;">
@@ -312,67 +308,53 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-
   </div>
   <br><br><br>
   <div style="text-align: center;">
     <button type="button" class="btn btn-dark btn-lg">Criar conta empresarial</button>
   </div>
-  
+
   <hr>
 
   <!-- FOOTER -->
-  <div class="container">
-    <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
-      <div class="col mb-3">
-        <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
-          <svg class="bi me-2" width="40" height="32">
-            <use xlink:href="#bootstrap"></use>
-          </svg>
-        </a>
-        <p class="text-body-secondary">© 2024</p>
-      </div>
+  <div style="background-color: #202020;">
+    <div class="container">
+      <h1 style="text-align: left; font-weight: bolder; color: white;">FoodDash</h1>
+      <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-2 border-top border-bottom">
+        <div class="col mb-3">
+          <img src="imgs/fd_logo_blackWhite.png" alt="Bootstrap" width="190" height="110">
+        </div>
+        <div class="col mb-3"></div>
+        <div class="col mb-3">
+          <h4 style="color: #FEBB41;">Conta Cliente</h4>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: white;">Login</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: white;">Registar</a></li>
+          </ul>
+        </div>    
+        <div class="col mb-3">
+          <h4 style="color: #FEBB41;">Sobre</h4>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: white;">História</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: white;">Equipa</a></li>
+          </ul>
+        </div>
 
-      <div class="col mb-3">
+        <div class="col mb-3">
+          <h4 style="color: #FEBB41;">Contatos</h4>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: white;">Apoio ao cliente</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: white;">Contato empresarial</a></li>
+          </ul>
+        </div>
 
-      </div>
-
-      <div class="col mb-3">
-        <h5>Section</h5>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
-        </ul>
-      </div>
-
-      <div class="col mb-3">
-        <h5>Section</h5>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
-        </ul>
-      </div>
-
-      <div class="col mb-3">
-        <h5>Section</h5>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
-        </ul>
-      </div>
-    </footer>
+      </footer>
+      <p class="text-end text-body-secondary">Todos os direitos reservados © FoodDash, 2024</p>
+    </div>
   </div>
 
 
+  <!-- SCRIPT -->
   <script>
     document.getElementById('loginBtn').addEventListener('click', function () {
       window.location.href = 'login_register/login.html';
