--- a/landing_home_page.html
+++ b/landing_home_page.html
@@ -331,7 +331,7 @@
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: white;">Login</a></li>
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: white;">Registar</a></li>
           </ul>
-        </div>    
+        </div>
         <div class="col mb-3">
           <h4 style="color: #FEBB41;">Sobre</h4>
           <ul class="nav flex-column">
@@ -344,15 +344,15 @@
           <h4 style="color: #FEBB41;">Contatos</h4>
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: white;">Apoio ao cliente</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: white;">Contato empresarial</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: white;">Contato empresarial</a>
+            </li>
           </ul>
         </div>
 
       </footer>
-      <p class="text-end text-body-secondary">Todos os direitos reservados © FoodDash, 2024</p>
+      <p class="text-end" style="color: white;">Todos os direitos reservados © FoodDash, 2024</p>
     </div>
   </div>
-
 
   <!-- SCRIPT -->
   <script>
