--- a/landing_home_page.html
+++ b/landing_home_page.html
@@ -38,7 +38,7 @@
     </div>
   </nav>
 
-  <!-- CONTAINER DE INSERIR CODIGO POSTAL -->
+  <!-- CONTAINER DE INSERIR MORADA -->
   <div class="bg-custom px-4 py-5 my-5 text-left">
     <h1 class="display-6 fw-bold text-body-primary" style="color: white;">Peça uma entrega perto de si</h1>
     <br>
@@ -46,7 +46,7 @@
       <div class="col-md-3">
         <div class="form-floating">
           <input type="text" class="form-control form-control-sm" id="floatingInput" placeholder="XXXX-YY">
-          <label for="floatingInput">Introduza um código postal</label>
+          <label for="floatingInput">Introduza uma morada</label>
         </div>
       </div>
       <div class="col-md-2">
