--- a/perfil_utilizador/dashboard_perfil_utilizador.html
+++ b/perfil_utilizador/dashboard_perfil_utilizador.html
@@ -92,10 +92,27 @@
 
     <!--Zona de Conteudo da Página -->
     <div id="contentDiv" class="col-md-10">
-      <p class="h2" id="nomeUser">Olá Maria!</p>
-      <p class="lead">
-        Esta é a tua página de perfil. Aqui podes ver as tuas informações pessoais, ver estatísticas sobre a tua conta, ver os teus pedidos e acompanhar o estado dos teus pedidos em tempo real.
-      </p>
+      <div class="container ps-3 py-3">
+        <div class="row">
+        <h1 class="title">Pedidos</h1>
+            <p>Esta é a tua página de pedidos. Aqui podes ver o teu histórico de pedidos feitos, ver o estado dos pedidos, etc.</p>
+        </div>
+        <div class="container">
+                <div class="row border border-2 border-secondary rounded my-3">
+                  <div class="col-sm-1 text-center align-self-center py-2 fs-6 "><span>13:46</span><br><span>16/03/24</span></div>
+                  <div class="col-sm-5 rounded-left rounded-right align-self-center py-2 px-5 fs-6">
+                      <strong>Menu Big King </strong> (Burger King)<br>
+                      <small>(Big King + Batatas Médias + IceTea Manga)</small>
+                  </div>
+                  <div class="col-sm-4 align-self-center py-2">
+                         <strong>Método de Pagamento:</strong> Visa ****1002<br>
+                         <span><strong>Status do pedido:</strong> Pedido em Processamento</span></small>
+                  </div>
+                  <div class="col-sm-1 text-center align-self-center fs-4 py-4 "><strong>9,28€</strong></div>
+                  <div class="col-sm-1 align-self-center text-center h-60"><strong><img class="img-fluid p-3" src="./icons.jpg" alt="" srcset=""></strong></div>
+              </div>
+            </div>
+        </div>
     </div>
   </div>
 
