--- a/perfil_utilizador/dashboard_perfil_utilizador.html
+++ b/perfil_utilizador/dashboard_perfil_utilizador.html
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="C:/Users/useri/Documents/ESTGA/02.02_PTAW/Repositorio/PTAW_FoodDash/styles/sitecss.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
-  <body>
-
+  <body >
   <!--Zona do Header -->
   <div id="topHeader" class="container-xxl">
     <!-- Top da Página -->
     <div class="row">
       <div class="col-md-3">
-        <img src="C:\Users\useri\Documents\ESTGA\02.02_PTAW\Repositorio\PTAW_FoodDash\imgs\FoodDash.png" class="img-fluid" alt="Responsive image">
+        <img src="../imgs/FoodDash.png" class="img-fluid" alt="Responsive image">
       </div>
       <div class="col-md-7"></div>
       <div class="col-md-2" style="text-align: right;">
@@ -97,7 +96,8 @@
         <h1 class="title">Pedidos</h1>
             <p>Esta é a tua página de pedidos. Aqui podes ver o teu histórico de pedidos feitos, ver o estado dos pedidos, etc.</p>
         </div>
-        <div class="container">
+        <div class="container ">
+              <!-- START OF SLIDE-->
                 <div class="row border border-2 border-secondary rounded my-3">
                   <div class="col-sm-1 text-center align-self-center py-2 fs-6 "><span>13:46</span><br><span>16/03/24</span></div>
                   <div class="col-sm-5 rounded-left rounded-right align-self-center py-2 px-5 fs-6">
@@ -110,8 +110,7 @@
                   </div>
                   <div class="col-sm-1 text-center align-self-center fs-4 py-4 "><strong>9,28€</strong></div>
                   <div class="col-sm-1 align-self-center text-center h-60"><strong><img class="img-fluid p-3" src="./icons.jpg" alt="" srcset=""></strong></div>
-              </div>
-            </div>
+                </div>
         </div>
     </div>
   </div>
