Estado de pedido

--- a/perfil_utilizador/dashboard_perfil_estado_pedido.html
+++ b/perfil_utilizador/dashboard_perfil_estado_pedido.html
@@ -97,19 +97,43 @@
             <p>Esta é a tua página de pedidos. Aqui podes ver o teu histórico de pedidos feitos, ver o estado dos pedidos, etc.</p>
         </div>
         <div class="container ">
-              <!-- START OF SLIDE-->
-                <div class="row border border-2 border-secondary rounded my-3">
-                  <div class="col-sm-1 text-center align-self-center py-2 fs-6 "><span>13:46</span><br><span>16/03/24</span></div>
-                  <div class="col-sm-5 rounded-left rounded-right align-self-center py-2 px-5 fs-6">
-                      <strong>Menu Big King </strong> (Burger King)<br>
-                      <small>(Big King + Batatas Médias + IceTea Manga)</small>
+                <div class="row border my-3">
+                  <div class="col-sm-1 fs-1 ">
+                    <i style="cursor:pointer" class="bi bi-arrow-left-short border border-2 rounded bg-light"></i>
                   </div>
-                  <div class="col-sm-4 align-self-center py-2">
-                         <strong>Método de Pagamento:</strong> Visa ****1002<br>
-                         <span><strong>Status do pedido:</strong> Pedido em Processamento</span></small>
+                  <div class="col-sm-11 rounded-left rounded-right align-self-center py-2 fs-6">
+                      <p class="display-6 fw-bold"><span>Menu Big King</span> - (<span>13:46</span>  <span>16/03/2024</span>)</p>
+                      <p>Big King + Batatas Médias + IceTea Manga</p>
+                      <p>Status do pedido: <span>💦</span></p>
+                      <p>Método de Pagamento: <span></span><span>Visa *****</span></p>
+                      <p>Preço: <span>9,28</span>€</p>
                   </div>
-                  <div class="col-sm-1 text-center align-self-center fs-4 py-4 "><strong>9,28€</strong></div>
-                  <div class="col-sm-1 align-self-center text-center h-60"><strong><img class="img-fluid p-3" src="./icons.jpg" alt="" srcset=""></strong></div>
+
+                  <div class="ps-3 py-3">MAP</div>
+
+                  <div class="container mt-5 px-5 ">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <div class="circle">1</div>
+                        <div class="line flex-grow-1"></div>
+                        <div class="circle">2</div>
+                        <div class="line flex-grow-1"></div>
+                        <div class="circle">3</div>
+                        <div class="line flex-grow-1"></div>
+                        <div class="circle">4</div>
+                        <div class="line flex-grow-1 gradient-line"></div>
+                        <div class="circle black-circle text-light">5</div>
+                    </div>
+                    <div class="d-flex justify-content-left align-items-left mb-4">
+                      <div class="pe-5 align-items-top text-center"><span>Efetuação<br> do Pedido</span></div>
+                      <div class="flex-grow-1"></div>
+                      <div class="pe-5 align-items-top text-center"><span>Recebimento<br> do Pedido</span></div>
+                      <div class="flex-grow-1"></div>
+                      <div class="pe-5 align-items-top text-center"><span>Em Preparação</span></div>
+                      <div class="flex-grow-1"></div>
+                      <div class="pe-5 align-items-top text-center"><span>Viagem Até<br> Sua Casa</span></div>
+                      <div class="flex-grow-1"></div>
+                      <div class="ps-4 align-items-top text-center"><span>Entregue</span></div>
+                  </div>
                 </div>
         </div>
     </div>
@@ -120,11 +144,11 @@
 
   <!--Zona do Footer -->
   <div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <p class="col-md-4 mb-0 text-<body>-secondary">© 2024 FoodDash</p>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-3 border-top">
+      <p class="col-md-4 mb-0 text-body-secondary">© 2024 FoodDash</p>
   
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <img src="..\imgs\FoodDash.png" class="img-fluid" alt="Responsive image">
+        <img src="../imgs/FoodDash.png" class="img-fluid" alt="Responsive image">
       </a>
   
       <ul class="nav col-md-4 justify-content-end">
