playing with mobile stuff :iphone:

--- a/perfil_utilizador/dashboard_perfil_utilizador.html
+++ b/perfil_utilizador/dashboard_perfil_utilizador.html
@@ -98,7 +98,7 @@
         </div>
         <div class="container ">
               <!-- START OF SLIDE-->
-                <div class="row border border-2 border-secondary rounded my-3">
+                <div id="ticket-info" class="row border border-2 border-secondary rounded my-3">
                   <div class="col-sm-1 text-center align-self-center py-2 fs-6 "><span>13:46</span><br><span>16/03/24</span></div>
                   <div class="col-sm-5 rounded-left rounded-right align-self-center py-2 px-5 fs-6">
                       <strong>Menu Big King </strong> (Burger King)<br>
