--- a/perfil_utilizador/dashboard_perfil_estado_pedido.html
+++ b/perfil_utilizador/dashboard_perfil_estado_pedido.html
@@ -83,9 +83,9 @@
           </li>
         </ul>
         <hr>
-        <div>
+
           <button id="butSingOutSidebarLeft" class="btn btn-dark px-3" type="button">Terminar Sessão</button>
-        </div>
+      
       </div>
     </div>
 
@@ -93,20 +93,20 @@
     <div id="contentDiv" class="col-md-10">
       <div class="container ps-3 py-3">
         <div class="row">
-        <h1 class="title">Pedidos</h1>
-            <p>Esta é a tua página de pedidos. Aqui podes ver o teu histórico de pedidos feitos, ver o estado dos pedidos, etc.</p>
+        <h1 class="text title">Pedidos</h1>
+            <p class="text subtitle">Esta é a tua página de pedidos. Aqui podes ver o teu histórico de pedidos feitos, ver o estado dos pedidos, etc.</p>
         </div>
         <div class="container ">
                 <div class="row border my-3">
                   <div class="col-sm-1 fs-1 ">
                     <i style="cursor:pointer" class="bi bi-arrow-left-short border border-2 rounded bg-light"></i>
                   </div>
-                  <div class="col-sm-11 rounded-left rounded-right align-self-center py-2 fs-6">
-                      <p class="display-6 fw-bold"><span>Menu Big King</span> - (<span>13:46</span>  <span>16/03/2024</span>)</p>
-                      <p>Big King + Batatas Médias + IceTea Manga</p>
-                      <p>Status do pedido: <span>💦</span></p>
-                      <p>Método de Pagamento: <span></span><span>Visa *****</span></p>
-                      <p>Preço: <span>9,28</span>€</p>
+                  <div class=" rounded-left rounded-right align-self-center py-2 fs-6">
+                      <p class="title display-6 fw-bold"><span>Menu Big King</span> - (<span>13:46</span>  <span>16/03/2024</span>)</p>
+                      <p class="text">Big King + Batatas Médias + IceTea Manga</p>
+                      <p class="text">Status do pedido: <span>💦</span></p>
+                      <p class="text">Método de Pagamento: <span></span><span>Visa *****</span></p>
+                      <p class="text">Preço: <span>9,28</span>€</p>
                   </div>
 
                   <div class="ps-3 py-3">MAP</div>
@@ -124,15 +124,15 @@
                         <div class="circle black-circle text-light">5</div>
                     </div>
                     <div class="d-flex justify-content-left align-items-left mb-4">
-                      <div class="pe-5 align-items-top text-center"><span>Efetuação<br> do Pedido</span></div>
-                      <div class="flex-grow-1"></div>
-                      <div class="pe-5 align-items-top text-center"><span>Recebimento<br> do Pedido</span></div>
-                      <div class="flex-grow-1"></div>
-                      <div class="pe-5 align-items-top text-center"><span>Em Preparação</span></div>
-                      <div class="flex-grow-1"></div>
-                      <div class="pe-5 align-items-top text-center"><span>Viagem Até<br> Sua Casa</span></div>
-                      <div class="flex-grow-1"></div>
-                      <div class="ps-4 align-items-top text-center"><span>Entregue</span></div>
+                      <div class="roadmap-item ten-percent-to-left align-items-top text-center"><span>Efetuação<br> do Pedido</span></div>
+                      <div class="roadmap-item flex-grow-1"></div>
+                      <div class="roadmap-item align-items-top text-center"><span>Recebimento<br> do Pedido</span></div>
+                      <div class="roadmap-item flex-grow-1"></div>
+                      <div class="roadmap-item ten-percent-to-left align-items-top text-center"><span>Em Preparação</span></div>
+                      <div class="roadmap-item flex-grow-1"></div>
+                      <div class="roadmap-item ten-percent-to-left align-items-top text-center"><span>Viagem Até<br> Sua Casa</span></div>
+                      <div class="roadmap-item flex-grow-1"></div>
+                      <div class="roadmap-item ten-percent-to-right align-items-top text-center"><span>Entregue</span></div>
                   </div>
                 </div>
         </div>
