--- a/login_register/login.html
+++ b/login_register/login.html
@@ -9,34 +9,56 @@
   <title>FoodDash</title>
 </head>
 
-<body class="bg-body-tertiary">
+<body>
+  <!-- Imagem no canto superior esquerdo -->
+  <img src="FoodDash.png" alt="FoodDash Logo" style="position: absolute; top: 8%; left: 4%; width: 15%; height: auto;">
 
+  <!-- Formulário de login -->
   <div class="container d-flex align-items-center justify-content-center vh-100">
-    <main class="form-signin">
-      <form>
-        <img class="mb-4" src="fooddash logo image.png" alt="" width="300"
-          height="57">
-        <h1 class="h3 mb-3 fw-normal">Login</h1>
+    <form style="width: 30%;">
+      <h1 class="h1 mb-3" style="text-align: center;">Login</h1><br>
+      <div class="form-floating">
+        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email</label>
+      </div>
+      <div class="form-floating">
+        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <label for="floatingPassword">Password</label>
 
-        <div class="form-floating">
-          <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-          <label for="floatingInput">Email address</label>
-        </div>
-        <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-          <label for="floatingPassword">Password</label>
-        </div>
-
-        <div class="checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="mostrarPasswordCheckbox">
+          <label class="form-check-label" for="flexCheckDefault">
+            Mostrar password
           </label>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
-        
-      </form>
-    </main>
+      </div>
+      <div class="checkbox mb-3">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="Guardar email" id="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault">
+            Guardar email
+          </label>
+        </div>
+      </div>
+      <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
+      <br><br>
+      <p style="text-align: center;">Ainda não tem conta?<button type="button" class="btn btn-link">Registe-se</button>
+      </p>
+    </form>
   </div>
+
+
+  <script>
+    document.querySelector("input#mostrarPasswordCheckbox").addEventListener("click", mostrarPassword)
+    function mostrarPassword() {
+      let passwordInput = document.getElementById("floatingPassword");
+      if (passwordInput.type === "password") {
+        passwordInput.type = "text";
+      } else {
+        passwordInput.type = "password";
+      }
+    }
+  </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
