--- a/landing_home_page.html
+++ b/landing_home_page.html
@@ -55,8 +55,6 @@
     </div>
   </div>
 
-  <hr>
-
   <!-- CONTAINER COMO TRABALHAMOS -->
   <div class="container px-4 py-5" id="featured-3">
     <h1 class="pb-2 border-bottom" style="text-align: center; font-weight: bolder;">Como Trabalhamos</h1>
@@ -206,8 +204,6 @@
   </div> 
   -->
 
-  <hr>
-
   <!-- CONTAINER FUNCIONALIDADES E INFORMAÇÕES EXTRAS -->
   <div class="container px-4 py-5" id="custom-cards">
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
@@ -254,8 +250,6 @@
       </div>
     </div>
   </div>
-
-  <hr>
 
   <!-- PUBLICIDADE BUSINESS EMPRESARIAL -->
   <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
@@ -309,12 +303,10 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-  <br><br><br>
+  <br><br>
   <div style="text-align: center;">
     <button type="button" class="btn btn-dark btn-lg">Criar conta empresarial</button>
-  </div>
-
-  <hr>
+  </div><br><br>
 
   <!-- FOOTER -->
   <div style="background-color: #202020;">
@@ -339,7 +331,6 @@
             <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: white;">Equipa</a></li>
           </ul>
         </div>
-
         <div class="col mb-3">
           <h4 style="color: #FEBB41;">Contatos</h4>
           <ul class="nav flex-column">
@@ -348,7 +339,6 @@
             </li>
           </ul>
         </div>
-
       </footer>
       <p class="text-end" style="color: white;">Todos os direitos reservados © FoodDash, 2024</p>
     </div>
