--- a/restaurantes/menu_page.html
+++ b/restaurantes/menu_page.html
@@ -651,7 +651,7 @@
     <!-- Paginação -->
     <nav aria-label="Page navigation example">
       <ul class="pagination" style="justify-content: right; margin-top: 20px;">
-        <li class="page-item"><a class="page-link" href="#">Anterior</a></li>
+        <li class="page-item disabled"><a class="page-link" href="#">Anterior</a></li>
         <li class="page-item active"><a class="page-link" href="#">1</a></li>
         <li class="page-item"><a class="page-link" href="#">2</a></li>
         <li class="page-item"><a class="page-link" href="#">3</a></li>
