--- a/restaurantes/menu_restaurante_page.html
+++ b/restaurantes/menu_restaurante_page.html
@@ -43,9 +43,50 @@
     </div>
   </nav>
 
+  <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 px-0">
+          <h1 class="display-4" style="font-weight: bolder;">Burger King</h1>
+          <h5 class="mb-0">4.7★</h5>
+          <p class="mb-0">Taxa de Entrega: 2,50€</p>
+        </div>
+        <!-- Nova imagem aqui -->
+        <img src="imgs/burger_king_bg.jpg" alt="Imagem do restaurante"
+          style="width: 100%; max-width: 300px; margin-top: 20px;">
+        <div class="col-lg-6 px-3">
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Procurar restaurante" id="inputPesquisarRestaurante">
+            <button class="btn btn-outline-primary" type="button" id="buttonPesquisarRestaurante">Procurar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
-  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <br><br><br><br><br>
   <!-- Footer -->
   <div style="background-color: #202020;">
