atualização página do restaurante

--- a/restaurantes/menu_restaurante_page.html
+++ b/restaurantes/menu_restaurante_page.html
@@ -43,26 +43,28 @@
     </div>
   </nav>
 
-  <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
+  <!-- IDENTIFICAÇÃO DO RESTAURANTE -->
+  <div class="p-4 p-md-5 mb-4" style="background-color: #ffffff; border-bottom: 10px ridge #febc41; border-radius: 15px;">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-6 px-0">
-          <h1 class="display-4" style="font-weight: bolder;">Burger King</h1>
-          <h5 class="mb-0">4.7★</h5>
-          <p class="mb-0">Taxa de Entrega: 2,50€</p>
+        <div class="row">
+            <div class="col-lg-4 px-0">
+                <h1 class="display-4" style="font-weight: bolder;">Burger King</h1>
+                <h5 class="mb-0">4.7★</h5>
+                <p class="mb-0">Taxa de Entrega: 2,50€</p>
+            </div>
+            <div class="col-lg-4 text-center">
+                <img src="imgs/burgerKing_marca.png" alt="Imagem do restaurante" style="max-width: 300px;">
+            </div>
+            <div class="col-lg-4 px-4">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Procurar item" id="inputPesquisarRestaurante">
+                    <button class="btn btn-outline-primary" type="button" id="buttonPesquisarRestaurante">Procurar</button>
+                </div>
+            </div>
         </div>
-        <!-- Nova imagem aqui -->
-        <img src="imgs/burger_king_bg.jpg" alt="Imagem do restaurante"
-          style="width: 100%; max-width: 300px; margin-top: 20px;">
-        <div class="col-lg-6 px-3">
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Procurar restaurante" id="inputPesquisarRestaurante">
-            <button class="btn btn-outline-primary" type="button" id="buttonPesquisarRestaurante">Procurar</button>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
+</div>
+
 
 
 
