--- a/restaurantes/menu_restaurante_page.html
+++ b/restaurantes/menu_restaurante_page.html
@@ -65,17 +65,74 @@
     </div>
 </div>
 
-
-
-
-
-
-
-
-
-
-
-
+<!-- SIDEBAR CATEGORIAS -->
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px; margin-left: 20px;">
+  <span class="fs-4">Categorias:</span>
+  <hr>
+  <ul class="nav nav-pills flex-column mb-auto">
+    <li class="nav-item">
+      <a href="#" class="nav-link active" aria-current="page">
+        Novidades
+      </a>
+    </li>
+    <li class="nav-item">
+      <a href="#" class="nav-link link-dark" aria-current="page">
+        Na grelha
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link link-dark">
+        Frango
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link link-dark">
+        Vaca
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link link-dark">
+        King Jr
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link link-dark">
+        Sem gluten
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link link-dark">
+        Gourmet
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link link-dark">
+        Hamburguers
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link link-dark">
+        Sobremesas
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link link-dark">
+        Entradas
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link link-dark">
+        Molhos
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-link link-dark">
+        Bedidas
+      </a>
+    </li>
+  </ul>
+  <hr>
+</div>
 
 
 
